@@ -441,7 +441,6 @@ extern "C" {
   /** Extended variant of dfsch_eval_proc with support for tail recursion */
   extern dfsch_object_t* dfsch_eval_proc_tr(dfsch_object_t* code, 
                                             dfsch_object_t* env,
-                                            dfsch_object_t* call_signature,
                                             dfsch_tail_escape_t* esc);
   /** Extended variant of dfsch_apply with support for tail recursion */
   extern dfsch_object_t* dfsch_apply_tr(dfsch_object_t* proc, 
