@@ -1,3 +1,7 @@
+2008-09-17  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (dfsch_apply_impl): native stack frames
+
 2008-08-18  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c: removed remnants of old exception mechanism
